<resources>
    <string name="app_name">Oxford School</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_student_profile">Student Profile</string>
    <string name="lbl_class_management">Class Management</string>
    <string name="lbl_section_managment">Section Management</string>
    <string name="lbl_assign_section">Assign Section</string>
    <string name="lbl_events">Events</string>
    <string name="lbl_homework">Homework</string>
    <string name="lbl_diary">Diary</string>
    <string name="lbl_discipline_report">Discipline Report</string>
    <string name="lbl_attendance">Attendance</string>
    <string name="lbl_calendar">Calendar</string>
    <string name="lbl_add_event">Add Event</string>
    <string name="lbl_update_event">Update Event</string>
    <string name="lbl_add_subject">Add Subject</string>
    <string name="lbl_update_subject">Update Subject</string>
    <string name="lbl_mass_notification">Mass Notification</string>
    <string name="lbl_add_marks">Add Marks</string>
    <string name="lbl_add_exam">Add Examination</string>
    <string name="lbl_exam_schedule">Exam Schedule</string>
    <string name="lbl_exam_result">Exam Result</string>
    <string name="lbl_fees_detail">Fees Detail</string>
    <string name="lbl_time_table">Time Table</string>
    <string name="lbl_reports">CCE Report</string>
    <string name="lbl_logout">Logout</string>
    <string-array name="left_menu_staff">
        <item>@string/lbl_about_us</item>
        <item>@string/lbl_profile</item>
        <item>@string/lbl_student_profile</item>
        <item>@string/lbl_events</item>
        <item>@string/lbl_homework</item>
        <item>@string/lbl_diary</item>
        <item>@string/lbl_discipline_report</item>
        <item>@string/lbl_attendance</item>
        <item>@string/lbl_calendar</item>
        <item>@string/lbl_add_marks</item>
        <item>@string/lbl_exam_schedule</item>
        <item>@string/lbl_exam_result</item>
        <item>@string/lbl_fees_detail</item>
        <item>@string/lbl_time_table</item>
        <item>@string/lbl_subjects</item>
        <item>@string/lbl_logout</item>
    </string-array>
    <string-array name="left_menu_admin">
        <item>@string/lbl_about_us</item>
        <item>@string/lbl_profile</item>
        <item>@string/lbl_class_management</item>
        <item>@string/lbl_section_managment</item>
        <item>@string/lbl_assign_section</item>
        <item>@string/lbl_student_profile</item>
        <item>@string/lbl_events</item>
        <item>@string/lbl_homework</item>
        <item>@string/lbl_diary</item>
        <item>@string/lbl_discipline_report</item>
        <item>@string/lbl_attendance</item>
        <item>@string/lbl_calendar</item>
        <item>@string/lbl_add_exam</item>
        <item>@string/lbl_add_marks</item>
        <item>@string/lbl_exam_schedule</item>
        <item>@string/lbl_exam_result</item>
        <item>@string/lbl_fees_detail</item>
        <item>@string/lbl_time_table</item>
        <item>@string/lbl_subjects</item>
        <item>@string/lbl_mass_notification</item>
        <item>@string/lbl_logout</item>
    </string-array>
    <string-array name="left_menu_parent_student">
        <item>@string/lbl_about_us</item>
        <item>@string/lbl_profile</item>
        <item>@string/lbl_student_profile</item>
        <item>@string/lbl_events</item>
        <item>@string/lbl_homework</item>
        <item>@string/lbl_diary</item>
        <item>@string/lbl_discipline_report</item>
        <item>@string/lbl_attendance</item>
        <item>@string/lbl_calendar</item>
        <item>@string/lbl_exam_schedule</item>
        <item>@string/lbl_exam_result</item>
        <item>@string/lbl_fees_detail</item>
        <item>@string/lbl_time_table</item>
        <item>@string/lbl_reports</item>
        <item>@string/lbl_logout</item>
    </string-array>
    <string name="lbl_loading">Loading...Please wait...</string>
    <string name="lbl_welcome">Welcome to Oxford School</string>
    <string name="lbl_parent_module">Parent Module</string>
    <string name="title_messages">Messages</string>
    <string name="lbl_title">Title</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_class">Class :</string>
    <string name="lbl_section">Section :</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_Email">Email</string>
    <string name="lbl_Mobile">Mobile</string>
    <string name="lbl_address">Address</string>
    <string name="msg_upload_image">Please wait...Uploading image...</string>
    <string name="lbl_no_student">No Student Found</string>
    <string name="lbl_students">Students</string>
    <string name="lbl_select_section">Select Section</string>
    <string name="lbl_select_class_selection">Please select class and section.</string>
    <string name="lbl_event_name">Event Name </string>
    <string name="lbl_subject_name">Subject Name </string>
    <string name="lbl_start_date">Starts</string>
    <string name="lbl_end_date">Ends</string>
    <string name="lbl_organizer">Organizer</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_no_events">No Events</string>
    <string name="lbl_no_subjects">No Subjects</string>
    <string name="lbl_starts_on">Starts On</string>
    <string name="lbl_select_start_date">Select Start Date &amp; Time</string>
    <string name="lbl_select_end_date">Select End Date &amp; Time</string>
    <string name="lbl_msg_blank_event_name">Please fill event name</string>
    <string name="lbl_msg_blank_subject_name">Please fill subject name</string>
    <string name="lbl_msg_blank_title">Please fill title for notification</string>
    <string name="lbl_msg_blank_message">Please fill message</string>
    <string name="lbl_msg_blank_description">Please fill description about event</string>
    <string name="lbl_msg_valid_event_name">Event Name should contain atleast 6 characters</string>
    <string name="lbl_msg_valid_title">Title should contain atleast 4 characters</string>
    <string name="lbl_msg_valid_message">Message should contain atleast 6 characters</string>
    <string name="lbl_msg_valid_subject_name">Subject Name should contain atleast 4 characters</string>
    <string name="lbl_msg_valid_description">Description should contain atleast 6 characters</string>
    <string name="lbl_add">Add </string>
    <string name="lbl_class_hw">Class </string>
    <string name="lbl_update">Update </string>
    <string name="lbl_section_hw">Sec </string>
    <string name="lbl_select_date">Select Date</string>
    <string name="lbl_no_homework">No homework on </string>
    <string name="lbl_assignment"> Assignment </string>
    <string name="lbl_comments"> Comments </string>
    <string name="lbl_assignmentI"> Assignment I </string>
    <string name="lbl_assignmentII"> Assignment II </string>
    <string name="lbl_no_home_work">No HomeWork found </string>
    <string name="lbl_no_diary_notes">No diary notes found </string>
    <string name="msg_future_date">Please Select Today date or future date to give Assignment </string>
    <string name="lbl_msg_blank_assignment">Please fill Assignment for this class</string>
    <string name="lbl_msg_blank_comments">Please fill Comments for this class</string>
    <string name="lbl_marks">Marks</string>
    <string name="lbl_Result">Result</string>
    <string name="lbl_subjects">Subject</string>
    <string name="lbl_1hour">1 Hr</string>
    <string name="lbl_2hour">2 Hr</string>
    <string name="lbl_3hour">3 Hr</string>
    <string name="lbl_4hour">4 Hr</string>
    <string name="lbl_5hour">5 Hr</string>
    <string name="lbl_6hour">6 Hr</string>
    <string name="lbl_7hour">7 Hr</string>
    <string name="lbl_8hour">8 Hr</string>
    <string name="lbl_avg">Avg</string>
    <string name="lbl_grade">Grade</string>
    <string name="lbl_chart_view">Chart View</string>
    <string name="lbl_list_view">List View</string>
    <string name="lbl_view_attendance">View Attendance</string>
    <string name="lbl_take_attendance">Take Attendance</string>
    <string name="lbl_month">Select Month</string>
    <string name="lbl_working_days">Working Days  </string>
    <string name="lbl_present_days">Present Days  </string>
    <string name="lbl_percentage">Percentage  </string>
    <string name="lbl_self_control">Self Control</string>
    <string name="lbl_obey_rules">Obey Rules</string>
    <string name="lbl_obey_staff">Obey Staff</string>
    <string name="lbl_dress_code">Dress Code</string>
    <string name="lbl_time_keeping">Time Keeping</string>
    <string name="lbl_conduct">Conduct</string>
    <string name="lbl_about_us_text_one">A warm welcome to the Oxford School! Thank you for your interest and we hope to be able to welcome you in person when you make your way ‘up the hill’ to our lovely campuses.</string>
    <string name="lbl_about_us_text_two">Oxford School was founded in 1899 to serve the Christian worker community of India and South-East Asia.  More than a century has passed and the School continues to fulfil its original purpose although it has grown in size and is styled an International School recognised as such by the Government of India and the State of Tamil Nadu.</string>
    <string name="lbl_about_us_text_three">It is a co-educational and predominantly boarding school for children aged 8 years to 19 years.  About 10% of our students are day students (with staff children and children from the Defence Services Staff Training College in Wellington in addition).  Students study the English National Curriculum leading to IGCSE in Standards 10 and 11 and to A  levels in Standards 12 and 13.</string>
    <string name="lbl_our_aims_text_one">1.To provide excellent educational opportunities through a strong academic curriculum and a wide range of extra-curricular activities;</string>
    <string name="lbl_our_aims_text_two">2.To provide a personalised, caring, family-based environment;</string>
    <string name="lbl_our_aims_text_three">3.To encourage students tostrive for excellence and to develop to their full potential in all areas of their lives;</string>
    <string name="lbl_our_aims_text_four">4.To challenge students to work out the focus and direction of their lives in preparation for life after school;</string>
    <string name="lbl_our_aims_text_five">5.To foster a genuine respect for others and to inspire the school community to live in the service of God and others;</string>
    <string name="lbl_our_aims_text_six">6.To serve the neighbourhood and wider community;</string>
    <string name="lbl_our_aims_text_seven">7.To provide a resource for Christian workers in Asia, and business communities requiring an international education for their children.</string>
    <string name="lbl_facilities_one">Educational Facilities</string>
    <string name="lbl_facilities_two">Food</string>
    <string name="lbl_facilities_three">Medical</string>
    <string name="lbl_facilities_four">Dormitory</string>
    <string name="lbl_facilities_text_one">The school has six excellent computer labs. Our students have unlimited access to computers.</string>
    <string name="lbl_facilities_text_two">A well-balanced, wholesome and nutritious food, both vegetarian and non-vegetarian.</string>
    <string name="lbl_facilities_text_three">The school has two hospitals with two Resident Medical Officers and experienced and trained staff nurses.</string>
    <string name="lbl_facilities_text_four">One of the primary concerns of the Institution since its inception is the provision of the amenities.</string>
</resources>