<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_our_aims_text_one"
            style="@style/text_view_label_teacher"
            android:singleLine="false"
            android:text="@string/lbl_our_aims_text_one" />

        <TextView
            android:id="@+id/tv_our_aims_text_two"
            style="@style/text_view_label_teacher"
            android:singleLine="false"
            android:text="@string/lbl_our_aims_text_two" />

        <TextView
            android:id="@+id/tv_our_aims_text_three"
            style="@style/text_view_label_teacher"
            android:singleLine="false"
            android:text="@string/lbl_our_aims_text_three" />

        <TextView
            android:id="@+id/tv_our_aims_text_four"
            style="@style/text_view_label_teacher"
            android:singleLine="false"
            android:text="@string/lbl_our_aims_text_four" />

        <TextView
            android:id="@+id/tv_our_aims_text_five"
            style="@style/text_view_label_teacher"
            android:singleLine="false"
            android:text="@string/lbl_our_aims_text_five" />

        <TextView
            android:id="@+id/tv_our_aims_text_six"
            style="@style/text_view_label_teacher"
            android:singleLine="false"
            android:text="@string/lbl_our_aims_text_six" />

        <TextView
            android:id="@+id/tv_our_aims_text_seven"
            style="@style/text_view_label_teacher"
            android:singleLine="false"
            android:text="@string/lbl_our_aims_text_seven" />

    </LinearLayout>

</ScrollView>