<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_list_view"
        android:icon="@drawable/ic_action_action_view_list"
        android:title="@string/lbl_list_view"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_chart_view"
        android:icon="@drawable/ic_action_chart"
        android:title="@string/lbl_chart_view"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>