<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_exam_subject"
            style="@style/text_view_label"
            android:layout_weight="1"
            android:text="@string/lbl_subjects" />

        <TextView
            android:id="@+id/tv_exam_marks"
            style="@style/text_view_label"
            android:layout_weight="1.2"
            android:text="@string/lbl_marks" />

        <TextView
            android:id="@+id/tv_exam_result"
            style="@style/text_view_label"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/lbl_Result" />
    </LinearLayout>

</LinearLayout>