<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_parent_style"

    android:orientation="vertical">

    <!-- List Header Starts -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_app"
        android:paddingBottom="@dimen/space_layout_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_lbl_subject_name"
            style="@style/text_view_label_teacher"
            android:layout_weight="0.9"
            android:textColor="@color/color_white"
            android:text="@string/lbl_subjects" />

        <TextView
            android:id="@+id/tv_lbl_average"
            style="@style/text_view_label_teacher"
            android:layout_weight="1.2"
            android:textColor="@color/color_white"
            android:text="@string/lbl_avg" />

        <TextView
            android:id="@+id/tv_lbl_grade"
            style="@style/text_view_label_teacher"
            android:layout_weight="1.2"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:text="@string/lbl_grade" />

    </LinearLayout>

    <!-- List Header Ends -->

    <!-- List Starts -->

    <LinearLayout style="@style/match_parent_style">

        <com.daemon.oxfordschool.components.RecycleEmptyErrorView
            android:id="@+id/recycler_view_cce_exam_report"
            style="@style/match_parent_style" />

        <include layout="@layout/view_list_empty"></include>

    </LinearLayout>

    <!-- List Ends -->

</LinearLayout>