<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Image Starts here -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"/>

        </LinearLayout>

        <!-- Image Ends here -->

        <!-- TextViews Starts here -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_layout_margin">


            <TextView
                android:id="@+id/tv_about_us_one"
                style="@style/text_view_label_teacher"
                android:singleLine="false"
                android:text="@string/lbl_about_us_text_one" />

            <TextView
                android:id="@+id/tv_about_us_two"
                style="@style/text_view_label_teacher"
                android:singleLine="false"
                android:text="@string/lbl_about_us_text_two" />

            <TextView
                android:id="@+id/tv_about_us_three"
                style="@style/text_view_label_teacher"
                android:singleLine="false"
                android:text="@string/lbl_about_us_text_three" />

        </LinearLayout>

        <!-- TextViews Ends here -->

    </LinearLayout>

</ScrollView>