<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_section_class_selector" />

    <LinearLayout
        style="@style/match_parent_style"
        android:orientation="vertical">


        <LinearLayout
            style="@style/match_wrap_style"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/space_layout_padding"
            android:paddingRight="@dimen/space_layout_padding">

            <!-- Select Date Starts Here -->

            <LinearLayout
                style="@style/match_wrap_style"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_lbl_select_date"
                    style="@style/text_view_label_teacher"
                    android:text="@string/lbl_select_date" />

                <Button
                    android:id="@+id/btn_select_date"
                    style="@style/btn_style_select_date" />

            </LinearLayout>

            <!-- Select Date Ends Here -->


        </LinearLayout>

        <!-- Attendance options Starts Here -->

        <LinearLayout
            android:id="@+id/ll_attendance_view"
            android:orientation="vertical"
            style="@style/match_wrap_style"
            android:layout_marginTop="@dimen/vertical_gap_heading"
            android:paddingTop="@dimen/space_layout_margin">

            <Button
                android:id="@+id/btn_take_attendance"
                style="@style/btn_login_style"
                android:text="@string/lbl_take_attendance"/>

            <Button
                android:id="@+id/btn_view_attendance"
                style="@style/btn_login_style"
                android:text="@string/lbl_view_attendance"
                android:layout_marginTop="@dimen/space_layout_margin"/>

        </LinearLayout>

        <!-- Attendance options Ends Here -->

    </LinearLayout>


</LinearLayout>

